teste da class getCoursesServlet.